# mcp

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAPS.md  docusaurus.config.ts  package-lock.json  package.json  tsconfig.json
.devcontainer/: devcontainer.json
docs/: intro.md
docs/00-Introduction/: intro.md
docs/01-CoreConcepts/: overview.drawio  overview.md
docs/02-GettingStarted/: client.sample.py  installation.md  installation.mdx  server.sample.py  testing.md  to-cleanup-quickstart.md
docs/02-GettingStarted/mcp-server-demo/: interactive_client.py  pyproject.toml  pytest.ini
docs/03-AdvancedTopics/: test_mcp.py
docs/03-Tutorials/: custom-servers.md
docs/03-Tutorials/01-file-system-server/: README.md  file_operations.py  main.py  pyproject.toml  pytest.ini  server.py  test_config.py
docs/03-Tutorials/03-database-server/: server.py
docs/03-Tutorials/04-api-integration-server/: server.py
docs/03-Tutorials/05-chatbot-server/: README.md
docs/03-Tutorials/06-client-server-local-nlp/: README.md  client_streamlit_local_nlp_v1.py  tasks.db
docs/03-Tutorials/06-client-server-local-nlp/libs/: task_manager.py
docs/03-Tutorials/06-complete-server-client/: README.md  client.py  demo.py  main.py  pyproject.toml  requirements.txt  server.py  storage.py  streamlit_app.py  streamlit_client.py  task_manager.py  tasks.db
docs/03-Tutorials/07-client-server-llm/: .env.example  Procfile  README.md  app.py  apprunner.yaml  pyproject.toml  requirements.txt  start_client.py  storage_mcp_server.py  test_server.py
docs/03-Tutorials/07-client-server-llm/.streamlit/: secrets.toml
docs/03-Tutorials/07-client-server-llm/libs/: client.py
docs/03-Tutorials/08-client-server-gpt-oss/: .env.example  README.md  pyproject.toml  requirements.txt  start_client.py  storage_mcp_server.py  tasks.db  test_connection.py
docs/03-Tutorials/08-client-server-gpt-oss/libs/: __init__.py  local_llm_client.py  mcp_client.py
docs/03-Tutorials/09-authentication/: .env.example  auth.db  mcp_server.py  requirements.txt  setup.py  test_client.py
docs/03-Tutorials/09-authentication/libs/: audit_logger.py  security_utils.py
docs/04-BestPractices/: SECURITY_ARCHITECTURE.md  SECURITY_GUIDE.md  authentication.md  overview.drawio  security.md
docs/05-Deployment/: production.md
docs/Appendix/: _category_.json  api-reference.md  examples.md  ml-services.mdx  translate-your-site.md  troubleshooting.md
src/components/: Certificate.tsx  VercelAnalytics.tsx
src/components/HomepageFeatures/: index.tsx
src/components/QuizFeatures/: index.tsx
src/css/: custom.css
src/data/: quiz.sample.tsx
src/pages/: index.tsx  quiz.tsx  slash.md
tutorials/: README.md
tutorials/01-file-system-server/: security.py  server.py  test_server.py
tutorials/02-web-scraper-server/: README.md  server.py
tutorials/03-database-server/: README.md
tutorials/04-api-integration-server/: README.md
tutorials/05-chatbot-server/: server.py
tutorials/06-client-server-local-nlp/: server.py
tutorials/07-client-server-llm/: README.md  app.py  pyproject.toml
tutorials/07-client-server-llm/libs/: client.py
tutorials/08-client-server-gpt-oss/: pyproject.toml  start_client.py
tutorials/08-client-server-gpt-oss/libs/: local_llm_client.py
tutorials/09-authentication/: README.md  auth_client.py  example_usage.py  mcp_server.py  pyproject.toml  test_client.py
tutorials/09-authentication/libs/: auth_manager.py
tutorials/09-security/a.internal-system/: .env.example  .uvignore  README.md  interactive_client.py  mcp_client.py  mcp_server.py  pyproject.toml  rbac_proxy.py  setup.py  test_client.py
tutorials/09-security/a.internal-system/config/: role_mappings.yaml
tutorials/09-security/a.internal-system/data/: internal_system.db
tutorials/09-security/a.internal-system/examples/: client_example.py  start_server.sh
tutorials/09-security/a.internal-system/libs/: database_manager.py  idp_client.py  keycloak_client.py  mcp_adapter.py  rbac_manager.py
tutorials/09-security/a.internal-system/scripts/: start_server.sh  stop_server.sh
tutorials/09-security/b.third-party-integration/: .env.example  README.md  mcp_client.py  mcp_server.py  pyproject.toml  rbac_proxy.py
tutorials/09-security/b.third-party-integration/libs/: google_api_adapter.py  keycloak_client.py  mcp_adapter.py  rbac_manager.py
